--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm install --force && next build",
+    "prebuild": "npm install --force",
+    "build": "npm-run-all prebuild build-next",
+    "build-next": "next build",
     "start": "next start",
     "lint": "next lint"
   },
