--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "prebuild": "npm install --legacy-peer-deps",
-    "build": "npm run prebuild && next build",
-    "build-next": "next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -27,9 +25,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
