--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
@@ -26,8 +27,8 @@
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
